# blarg

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
posts/: 2023-01-configuring-sphinx-auto-doc-with-django.md
posts/2022/: test-post.md
src/blarg/: cli.py  main.py  mdconfig.py  server.py
src/blarg/templates/: default.html  default.jinja2  theme.jinja2
